[gd_scene load_steps=5 format=3 uid="uid://f1m6h4jojudh"]

[ext_resource type="Script" path="res://scripts/interface/graphical_user_interface.gd" id="1_57kfj"]
[ext_resource type="PackedScene" uid="uid://b1ye0d5616se3" path="res://scenes/interface/main_grid.tscn" id="2_d2cxe"]
[ext_resource type="PackedScene" uid="uid://c64qx3hvedkve" path="res://scenes/interface/connection_settings.tscn" id="3_ulaag"]

[sub_resource type="Theme" id="Theme_03af3"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_03af3")
script = ExtResource("1_57kfj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MainGrid" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_d2cxe")]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "SETTINGS
"

[node name="ConnectionSettings" parent="PanelContainer/VBoxContainer" instance=ExtResource("3_ulaag")]
visible = false
layout_mode = 2
